@@ -84,17 +84,6 @@ package.)</li>
 </ul>
 </div>
 
-<div class="section" id="demo">
-<h2>デモ</h2>
-
-<ul>
-<li><a href="http://suika.fam.cx/gate/2007/uri/uri-demo-interface" lang="en">manakai's
-URI module demo</a></li>
-<li><a href="http://suika.fam.cx/gate/2007/html/parser-manakai-interface" lang="en">HTML5
-parser (<em>beta</em>) Web interface (manakai version)</a></li>
-</ul>
-</div>
-
 <div class="section" id="documentation">
 <h2>文書</h2>
 
@@ -121,6 +110,17 @@ parser (<em>beta</em>) Web interface (manakai version)</a></li>
 </ul>
 </div>
 
+<div class="section" id="demo">
+<h2>デモ</h2>
+
+<ul>
+<li><a href="http://suika.fam.cx/gate/2007/uri/uri-demo-interface" lang="en">manakai's
+URI module demo</a></li>
+<li><a href="http://suika.fam.cx/gate/2007/html/parser-manakai-interface" lang="en">HTML5
+parser (<em>beta</em>) Web interface (manakai version)</a></li>
+</ul>
+</div>
+
 <div class="section" id="applications">
 <h2 data-lang-container=""><span lang="en">Applications using manakai-core</span></h2>
 
@@ -133,6 +133,8 @@ parser (<em>beta</em>) Web interface (manakai version)</a></li>
 </li><li id="app-webhacc"><a href="http://suika.fam.cx/gate/2007/html/cc/"><abbr>WebHACC</abbr>
 (Web hypertext application conformance checker)</a> (See also <a href="http://suika.fam.cx/gate/2007/html/cc-about"><cite>about
 WebHACC</cite></a>).
+
+</li><li><a href="http://suika.fam.cx/commitfeed/readme"><code>mkcommitfeed.pl</code></a>
 
 </li></ul>
 
