@@ -197,6 +197,9 @@ href="http://suika.fam.cx/gate/2007/html/cc/"><abbr>WebHACC</abbr>
 href="http://suika.fam.cx/gate/2007/html/cc-about"><cite>about
 WebHACC</cite></a>).
 
+<li><a
+href="http://suika.fam.cx/commitfeed/readme"><code>mkcommitfeed.pl</code></a>
+
 </ul>
 
 </div>
