@@ -1,3 +1,7 @@
+2008-11-24  Wakaba  <wakaba@suika.fam.cx>
+
+	* cover.html.src: Added a link to mkcommitfeed.pl.
+
 2008-10-21  Wakaba  <wakaba@suika.fam.cx>
 
 	* cover.html.src: A section on applications is added.
